# code-list-tools

./: .gitignore  .stow-local-ignore  .travis.yml  Makefile  Makefile.in  README.md  configure  configure.ac  stow.mk.in  unconfigured.mk  zip.mk
share/code-list-tools/: check-genericode.sch  check-genericode.sch.xsl  csv-to-gc.xsl  csv-to-xml.awk  get-document-element-name.xsl  table-to-gc.xsl  table.xsd  xml-catalog.xml
src/share/: check-genericode.sch  csv-to-gc.xsl  csv-to-xml.awk  csv-to-xml.xsd  table-to-gc.xsl.m4
